; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_tw9906.c_tw9906_log_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_tw9906.c_tw9906_log_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }
%struct.tw9906 = type { i32 }

@V4L2_STD_525_60 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Standard: %d Hz\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.v4l2_subdev*)* @tw9906_log_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tw9906_log_status(%struct.v4l2_subdev* %0) #0 {
  %2 = alloca %struct.v4l2_subdev*, align 8
  %3 = alloca %struct.tw9906*, align 8
  %4 = alloca i32, align 4
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %2, align 8
  %5 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %2, align 8
  %6 = call %struct.tw9906* @to_state(%struct.v4l2_subdev* %5)
  store %struct.tw9906* %6, %struct.tw9906** %3, align 8
  %7 = load %struct.tw9906*, %struct.tw9906** %3, align 8
  %8 = getelementptr inbounds %struct.tw9906, %struct.tw9906* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @V4L2_STD_525_60, align 4
  %11 = and i32 %9, %10
  store i32 %11, i32* %4, align 4
  %12 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %2, align 8
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i32 60, i32 50
  %17 = call i32 @v4l2_info(%struct.v4l2_subdev* %12, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %2, align 8
  %19 = call i32 @v4l2_ctrl_subdev_log_status(%struct.v4l2_subdev* %18)
  ret i32 0
}

declare dso_local %struct.tw9906* @to_state(%struct.v4l2_subdev*) #1

declare dso_local i32 @v4l2_info(%struct.v4l2_subdev*, i8*, i32) #1

declare dso_local i32 @v4l2_ctrl_subdev_log_status(%struct.v4l2_subdev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
